--- a/Exercise/SeSAC_06Week/SeSAC_06Week/Resource/Storyboard/Base.lproj/Search.storyboard
+++ b/Exercise/SeSAC_06Week/SeSAC_06Week/Resource/Storyboard/Base.lproj/Search.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="u2A-S8-jIE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cYD-Ou-YQa">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Search-->
+        <!--Search View Controller-->
         <scene sceneID="2OW-5u-Ky8">
             <objects>
                 <viewController storyboardIdentifier="SearchViewController" id="u2A-S8-jIE" customClass="SearchViewController" customModule="SeSAC_06Week" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1W6-9L-N9r">
-                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
@@ -30,7 +30,7 @@
                             <constraint firstItem="Uwq-7d-VWh" firstAttribute="bottom" secondItem="1W6-9L-N9r" secondAttribute="bottom" id="wAS-2W-In9"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="ZF7-uc-1Cw"/>
+                    <navigationItem key="navigationItem" id="qPg-nK-l04"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="searchTableView" destination="1W6-9L-N9r" id="3Za-nv-Hnu"/>
@@ -38,7 +38,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="usY-au-Pxq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="316" y="105"/>
+            <point key="canvasLocation" x="1226.0869565217392" y="104.46428571428571"/>
+        </scene>
+        <!--Search-->
+        <scene sceneID="4ie-Ws-0dg">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cYD-Ou-YQa" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="ZF7-uc-1Cw"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="KHt-Go-ZZK">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="u2A-S8-jIE" kind="relationship" relationship="rootViewController" id="gkn-aQ-uj7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="D5e-PM-SQr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="315.94202898550725" y="104.46428571428571"/>
         </scene>
     </scenes>
     <resources>
