--- a/Exercise/SeSAC_06Week/SeSAC_06Week/Resource/Storyboard/Base.lproj/Search.storyboard
+++ b/Exercise/SeSAC_06Week/SeSAC_06Week/Resource/Storyboard/Base.lproj/Search.storyboard
@@ -13,11 +13,11 @@
             <objects>
                 <viewController storyboardIdentifier="SearchViewController" id="u2A-S8-jIE" customClass="SearchViewController" customModule="SeSAC_06Week" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Eks-2O-tn5">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1W6-9L-N9r">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
@@ -46,7 +46,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cYD-Ou-YQa" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="ZF7-uc-1Cw"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="KHt-Go-ZZK">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="KHt-Go-ZZK">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
